# daconKRX2023

./: .gitignore  README.md  alpha01.ipynb  alpha_feat.inho.ipynb  alpha_feat.insoo.ipynb  alpha_feat_woohyuk.ipynb  eda_additional.ipynb  eda_inhouse.ipynb  eda_original.ipynb  ensemble_submissions.ipynb  final_module.ipynb  pyproject.toml  score_your_submission.ipynb  submission_config.py  submission_util.py
output/: Final Submission.csv  alpha_feat_inho.csv  alpha_feat_inho_ReverseSharpe.csv  alpha_feat_insoo_lagged_ReverseSharpe.csv  alpha_feat_insoo_rdvadv_ReverseSharpe-fixed.csv  alpha_feat_insoo_rdvadv_ReverseSharpe.csv  submission.csv
