[tool.poetry]
name = "daconkrx2023"
version = "0.1.0"
description = ""
authors = ["jaepil-choi <chljeffreyz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.25.1"
pandas = "^2.0.3"
seaborn = "^0.12.2"
matplotlib = "^3.7.2"
scikit-learn = "^1.3.0"
statsmodels = "^0.14.0"
tqdm = "^4.65.0"
jupyterlab = "^4.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
